--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,6 +4,42 @@
     <h1>Order #<%= @order.id %></h1>
   </header>
 
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th colspan="2">Product</th>
+        <th>Unit Price</th>
+        <th>Quantity</th>
+        <th>Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @order.line_items.each do |line_item| %>
+        <%= render 'item', product: line_item.product, quantity: line_item[:quantity].to_i %>
+      <% end %>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th colspan="2">
+          <strong>ORDER TOTAL:</strong>
+        </th>
+        <th colspan="4">
+          $<%= @order.total_cents / 100.0 %>
+        </th>
+      </tr>
+    </tfoot>
+    <tfoot>
+      <tr>
+        <th colspan="2">
+          <strong>EMAIL:</strong>
+        </th>
+        <th colspan="4">
+          <%= @order.email %>
+        </th>
+      </tr>
+    </tfoot>
+  </table>
+
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
   </div>
