--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,3 +1,18 @@
-// Place all the styles related to the About controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+main section.about-index {
+  margin: 50px;
+
+  h1 {
+    text-align: center;
+    margin: 30px 0;
+  }
+
+  p {
+    text-align: justify;
+  }
+
+  img {
+    float: left;
+    width: 50%;
+    margin-right: 20px;
+  }
+}
