Add category index and form feature

--- a/app/assets/stylesheets/admin/categories.scss
+++ b/app/assets/stylesheets/admin/categories.scss
@@ -1,2 +1,10 @@
-main section.admin-categories-index {
+main section.admin-categories-index,
+section.admin-categories-new {
+  ul {
+    margin: 20px 0;
+  }
+
+  .form-group {
+    margin: 20px 0;
+  }
 }
