--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -39,8 +39,20 @@
               <%= link_to category.name, category, class: "nav-link" %>
             </li>
             <% end %>
-            <li class="nav-item">
-              <%= link_to "About", [:about, :index], class: "nav-link" %>
+            <li class="nav-item dropdown">
+              <a
+              class="nav-link dropdown-toggle text-danger"
+              href="#"
+              id="navbarDropdownAdmin"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              >
+                More
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark text-center">
+                <li><%= link_to "About", [:about, :index], class: "nav-link text-danger" %></li>
+              </ul>
             </li>
           <%# </ul>
         </li> %>
@@ -57,16 +69,41 @@
           >
             Admin
           </a>
-          <ul class="dropdown-menu dropdown-menu-dark">
+          <ul class="dropdown-menu dropdown-menu-dark text-center">
             <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
             <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
-        <li class="nav-item end-0">
+        <li class="nav-item">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
         </li>
+        <li class="nav-item dropdown end-0">
+          <a
+            class="nav-link"
+            href="#"
+            id="navbarDropdownAdmin"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <%= fa_icon('user-circle-o', { base: "circle", class: 'btn btn-sm fa-lg text-white-50' }) %>
+            <% if current_user %>
+              <span><%= current_user.name %></span>
+            <% end %>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark text-center">
+            <% if !current_user %>
+              <li><%= link_to 'Login', [:login], class: "nav-link" %></li>
+              <li><%= link_to 'Signup', [:signup], class: "nav-link" %></li>
+            <% else %>
+              <li><%= link_to 'Logout', [:logout], class: "nav-link" %></li>
+            <% end %>
+          </ul>
+      </li>
+
+      
       </ul>
     </div>
   </div>
