--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
+    <% if active_sale? %>
+      <p class="alert alert-info mt-5">There's an active <%= "Back to school" %> sale going on! <strong>Everything is <%= "percent" %>% off!</strong></p>
+    <% end %>
     <%= yield %>
   </main>
 
