--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <main class="container">
     <% if active_sale? %>
-      <p class="alert alert-info mt-5">There's an active <%= "Back to school" %> sale going on! <strong>Everything is <%= "percent" %>% off!</strong></p>
+      <p class="alert alert-info mt-5">There's an active <strong><%= current_sale.name %></strong> sale going on! <strong>Everything is <%= current_sale.percent_off %>% off!</strong></p>
     <% end %>
     <%= yield %>
   </main>
