--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -84,7 +84,7 @@
           <a
             class="nav-link"
             href="#"
-            id="navbarDropdownAdmin"
+            id="navbarDropdownUser"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
