--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -50,12 +50,12 @@
 
 
 
-        <div class="form-group">
+        <div class="form-group mt-2">
           <%= form.label :image %>
           <%= form.file_field :image %>
         </div>
 
-        <%= form.submit 'Create Product', class: 'btn btn-primary' %>
+        <%= form.submit 'Create Product', class: 'btn btn-primary mt-5' %>
       <% end %>
     </div>
   </div>
